booq-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booq
  labels:
    app: booq

spec:
  selector:
    matchLabels:
      app: booq
  template:
    metadata:
      labels:
        app: booq
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org

      containers:

        - name: booq-frontend
          image: ghcr.io/traptitech/booq-ui:latest
          ports:
            - containerPort: 80

        - name: booq-backend
          image: ghcr.io/traptitech/booq:latest
          ports:
            - containerPort: 3001
