booq-dev/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: booq-backend-service

spec:
  type: ClusterIP
  selector:
    app: booq-backend
  ports:
    - name: booq-backend
      port: 3001
      targetPort: 3001
