booq-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booq-service

spec:
  type: ClusterIP
  selector:
    app: booq
  ports:
    - name: booq-frontend
      port: 80
      targetPort: 80
    - name: booq-backend
      port: 3001
      targetPort: 3001
